# CppToolTests

./: .gitignore  CMakeLists.txt  Jenkinsfile  project_build.sh  project_cppcheck.sh  project_cppclean.sh  project_test.sh
GCov/: modulo_loop.cpp
GTest/: CMakeLists.txt  build_and_test.sh  run_tests.sh
GTest/src/: main.cpp
GTest/unittests/: CMakeLists.txt  calc_tests.cpp
src/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.cpp
unittests/: CMakeLists.txt  calc_tests.cpp
